@@ -1453,6 +1453,7 @@ GEN     nudupl(GEN x, GEN L);
 GEN     nupow(GEN x, GEN n, GEN L);
 GEN     primeform(GEN x, GEN p, long prec);
 GEN     primeform_u(GEN x, ulong p);
+int     qfb_equal1(GEN f);
 GEN     qfbcompraw(GEN x, GEN y);
 GEN     qfbpowraw(GEN x, long n);
 GEN     qfbred0(GEN x, long flag, GEN D, GEN isqrtD, GEN sqrtD);
@@ -1461,7 +1462,6 @@ GEN     qfbsolve(GEN Q, GEN n);
 GEN     qfi(GEN x, GEN y, GEN z);
 GEN     qfi_1(GEN x);
 GEN     qfi_Shanks(GEN a, GEN g, long n);
-int     qfi_equal1(GEN f);
 GEN     qfi_log(GEN a, GEN g, GEN o);
 GEN     qfi_order(GEN q, GEN o);
 GEN     qficomp(GEN x, GEN y);
